Fix layout issue on login panel

--- a/static/app/css/custom.css
+++ b/static/app/css/custom.css
@@ -29,7 +29,6 @@
                  Login 
 \* ***************************************  */
 .login-panel {
-    width: 320px;
     min-height: 350px;
     background: white;
     padding: 30px;
